# genlm-eval

./: .coveragerc  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  pytest.yml
assets/molecular_synthesis/: GDB17_sample.txt
assets/spider/spider_sample/: dev.json  tables.json
assets/spider/spider_sample/database/concert_singer/: schema.sql
cookbook/cookbook/: index.html
cookbook/custom_domains/: index.html
cookbook/domains/molecular_synthesis/: index.html  molecular_synthesis.ipynb
cookbook/domains/pattern_matching/: index.html  pattern_matching.ipynb
cookbook/domains/spider/: index.html
docs/: gen_ref_pages.py  index.md
docs/cookbook/: cookbook.md  custom_domains.ipynb
docs/cookbook/domains/: spider.ipynb
gen_ref_pages/: index.html
genlm/eval/: __init__.py  util.py
genlm/eval/core/: __init__.py  dataset.py  evaluator.py  model.py  runner.py
genlm/eval/domains/: molecular_synthesis.py  pattern_matching.py
genlm/eval/domains/molecular_synthesis/: __init__.py  dataset.py  evaluator.py  model.py  molecular_synthesis.py
genlm/eval/domains/molecular_synthesis/data/: smiles.lark
genlm/eval/domains/pattern_matching/: __init__.py  dataset.py  evaluator.py  model.py
genlm/eval/domains/spider/: __init__.py  dataset.py  evaluator.py  model.py  spider.py  table_column_potential.py
genlm/eval/domains/spider/spider/: evaluation.py  evaluator.py
genlm/eval/domains/spider/spider_eval/: content_encoder.py  paths.py  utils.py
genlm/eval/models/: __init__.py  control.py
reference/SUMMARY/: index.html
reference/genlm/eval/__init__/: index.html
reference/genlm/eval/core/__init__/: index.html
reference/genlm/eval/core/dataset/: index.html
reference/genlm/eval/core/evaluator/: index.html
reference/genlm/eval/core/model/: index.html
reference/genlm/eval/core/runner/: index.html
reference/genlm/eval/domains/__init__/: index.html
reference/genlm/eval/domains/molecular_synthesis/: index.html
reference/genlm/eval/domains/pattern_matching/: index.html
reference/genlm/eval/domains/spider/__init__/: index.html
reference/genlm/eval/domains/spider/spider/: index.html
reference/genlm/eval/domains/spider/spider_eval/__init__/: index.html
reference/genlm/eval/domains/spider/spider_eval/content_encoder/: index.html
reference/genlm/eval/domains/spider/table_column_potential/: index.html
reference/genlm/eval/util/: index.html
search/: search_index.json
tests/: test_models.py  test_molecular_synthesis.py  test_pattern_matching.py  test_runner.py  test_spider.py  test_util.py
tests/molecular_synthesis/: test_molecular_synthesis.py
tests/molecular_synthesis/data/: test_molecules.smi
tests/spider/: test_spider.py
tests/spider/data/spider_data/: dev_gold.sql
(+7 files in other folders)
