[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "genlm-eval"
version = "0.1.0"
description = "Evaluation framework for models in the GenLM ecosystem"
authors = []
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
pattern_matching = [
    "genlm-control>=0.2.1",
    "regex",
]

spider = [
    "genlm-control>=0.2.1",
    "jsons",
    "lark",
    "rapidfuzz",
]

molecules = [
    "genlm-control>=0.2.1",
    "rdkit",
    "partialsmiles",
]

test = [
    "genlm-control>=0.2.1",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

docs = [
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.packages.find]
include = ["genlm", "genlm/eval"]
